my first website

--- a/images/style.css
+++ b/images/style.css
@@ -1,18 +1,76 @@
 body{
     font-family: 'Roboto', sans-serif;
+    margin:0;
+    
 }
 h1{
     font-size: 50px;
+    margin:0;
 }
-.name{
+h2{
+    font-size: 40px;
+}
+.orange{
     color:orange;
 }
 .half-width{
     width: 40%;
-    float: left;
+    float:left;
     margin-left:2%;
     padding-left:5%;
 }
 .half-width img{
     width:100%;
+}
+.top-banner{
+    background-image: url("../images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient( 45deg, lightsalmon, tomato);
+    padding: 10px 30px;
+    border-radius: 10px;
+    font-weight: 700;
+    color:white;
+
+}
+
+
+p{
+    color: dimgray;
+}
+.dream-area{
+    background-image: url("./dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    
+}
+.kola{
+    box-shadow: 10px 10px 40px gray;
+    border-radius:10px;
+    height:80%;
+    
+}
+.experience-area{
+    background-image: url("./exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left 180px;
+}
+#f{
+    border-left: 7px solid;
+    border-image: linear-gradient(lightsalmon,tomato);
+    border-image-slice: 1;
+    
+}
+#h{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan) ;
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
